tests/regression/errors/shadow_eff.eff
effect A : unit
effect B : unit
effect A : unit